test/errors/scan_fstring_too_deep.py
a=42
print(f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f"{f'{f""}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}'}"}')
